--- a/steve_app/resource_library/templates/user_home.html
+++ b/steve_app/resource_library/templates/user_home.html
@@ -1,14 +1,19 @@
+{% extends 'base.html' %}
 {% load static %}
-<html>
 
 
-<body>
-
-	<a class="btn btn-primary" href="{% url 'resource_library:user_links' %}"> Websites</a>	
-
-</body>
 
 
-</html>
+{% block content %}
+
+
+    <div>
+	    <a class="btn btn-primary" href="{% url 'resource_library:user_links' %}"> Websites</a>	
+        <a class="btn btn-primary" href="{% url 'resource_library:user_pictures' %}"> Pictures</a>
+    </div>
+
+{% endblock %}
+
+
 
 
