Added base.css stylesheet for base.html and did some basic styling on user_home, user_links, and user_pictures. Navbar is working correctly now,

--- a/steve_app/resource_library/templates/user_home.html
+++ b/steve_app/resource_library/templates/user_home.html
@@ -8,7 +8,7 @@
 
 
     <div>
-	    <a class="btn btn-primary" href="{% url 'resource_library:user_links' %}"> Websites</a>	
+	    <a class="btn btn-primary" href="{% url 'resource_library:user_links' %}"> Links</a>	
         <a class="btn btn-primary" href="{% url 'resource_library:user_pictures' %}"> Pictures</a>
     </div>
 
