--- a/steve_app/resource_library/templates/base.html
+++ b/steve_app/resource_library/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 
 <html>
@@ -5,11 +6,30 @@
 <head>
 	<!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-
+    <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}"/>
 </head>
 
 <body>
     
+    <nav class="navbar navbar-expand-md navbar-light">
+        <h2 class="navbar-brand">Navbar</h2>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent">
+            <span class="navbar-toggler-icon"></span>        
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'resource_library:user_home' %}"> Home </a>            
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'resource_library:user_links' %}"> Links </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'resource_library:user_pictures' %}"> Pictures </a>
+                </li>            
+            </ul>
+        </div>    
+    </nav>
 
 	{% block content %}
 	{% endblock %}
