--- a/steve_app/resource_library/templates/registration/login.html
+++ b/steve_app/resource_library/templates/registration/login.html
@@ -1,11 +1,15 @@
-{% extends 'base.html' %}
 {% load static %}
+<!DOCTYPE html>
+
+<html>
+
+<head>
+	<!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
 
-{% block content %}
-	<head>
-		<link rel='stylesheet' type='text/css' href="{% static 'css/login.css' %}">
-	</head>
+	<link rel='stylesheet' type='text/css' href="{% static 'css/login.css' %}">
+</head>
 
 	<div id="login">
 		<div class="container text-center">
@@ -18,4 +22,4 @@
 			</form>
 		</div>
 	</div>
-{% endblock %}
+
